# vin

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  meson.options  ruff.toml  test_image.sh  test_localvideo.sh  test_webcam.sh  vin.7
.github/workflows/: cmake-multi-platform.yml  ubuntu-build.yml
Formula/: vin.rb
debian/: control
flatbufs/: error_codes.fbs  tensor.fbs
include/: dlpack.h
include/inference/: onnx_utils.hpp
include/oculator/utils/: image_utils.h  torch_utils.h
include/oculator/viz/: DeviceReader.hpp  QTVideoPlayer.hpp
include/qtio/: image_view.hpp  qt_io.hpp
include/vin/: error_codes.hpp  vin_dag_manager.hpp  vin_gui.hpp
include/vin/utils/: lib_specification.hpp  vin_library.hpp
include/vin/viz/: ImageView.hpp  qt_io.hpp  qt_op.hpp  ui_putitup.h
src/: CMakeLists.txt  Info.plist  main.cpp  vin_dag_manager.cpp  vin_gui.cpp
src/inference/: inference_onnx.cpp  onnx_utils.cpp
src/oculator/source_tools/: gstio.cpp  vlcio.cpp
src/qtio/: CMakeLists.txt  image_view.cpp  imageview_output.cpp  qt_input.cpp  qt_ops.cpp  register_nodes.cpp
src/saccade_policy/: CMakeLists.txt  grad_heatmap.cpp  saccade_policy_io.cpp
src/utils/: lib_specification.cpp
src/vin/: main.cpp  vin_dag_manager.cpp  vin_gui.cpp
src/vin/saccade_policy/: grad_heatmap.cpp  saccade_policy_io.cpp
src/vin/source_tools/: CMakeLists.txt  qt_io.cpp  qt_op.cpp  qtio.cpp
src/vin/utils/: lib_specification.cpp  vin_library.cpp
src/viz/: 3dviewer.cpp  DeviceReader.cpp  ImageView.cpp  imageview_io.cpp  main_dialog.ui  putitup.ui
test/vin/: vin_library_tests.cpp
